--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,7 +11,7 @@ source:
   git_rev: v{{ version }}
  
 build:
-  number: 1
+  number: 2
   string: pyh{{ PKG_HASH }}_{{ PKG_BUILDNUM }}
   noarch: python
 
@@ -34,6 +34,7 @@ requirements:
     
 test:
   imports:
+    - tensorflow
     - tensorflow_estimator
 
 about:
