pip to pip in test section

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -33,6 +33,8 @@ requirements:
     - keras {{ keras }}
     
 test:
+  requires:
+    - pip {{ pip }}
   imports:
     - tensorflow
     - tensorflow_estimator
